--- a/main.css
+++ b/main.css
@@ -1,5 +1,8 @@
 .box {
+    display: block;
+    align-items: center;
+    justify-content: center;
     border: 1px solid black;
-    height: 500px;
-    width: 850px;
+    max-width: 80%;
+    max-height: 100%;
 }
